fix search bar white space

--- a/frontend/src/components/SearchBar/SearchBar.scss
+++ b/frontend/src/components/SearchBar/SearchBar.scss
@@ -1,5 +1,5 @@
 .search-bar-container {
-  height: 30px;
+  height: 28px;
   display: flex;
   cursor: pointer;
   padding: 9px 0 9px;
